# active-knowledge-suite

./: .gitignore  README.md  ZeppOS_validate_check.md
active-knowledge-server/: .gitignore  README.md  pyproject.toml
active-knowledge-server/eval/: cases.yaml  performance_cases.yaml  quality_cases.yaml  reproducibility_cases.yaml  stability_cases.yaml
active-knowledge-server/examples/: active-kb.yaml
active-knowledge-server/scripts/: benchmark_code_collect.py  benchmark_index.py  check_resume_consistency.py  hybrid_query_stability.py  manual_resume_smoke.py
active-knowledge-server/src/active_knowledge_server/: __init__.py  bootstrap.py  cli.py  cli_progress.py  feedback.py  server.py
active-knowledge-server/tests/contracts/: test_query_model_schemas.py  test_query_result_status_contracts.py  test_skill_routing_examples.py
active-knowledge-server/tests/fixtures/: query_intents.yaml  skill_routing_examples.yaml
active-knowledge-server/tests/regression/: test_migration_backup_recovery.py
active-knowledge-server/tests/unit/: test_audit_logging.py  test_build_outputs_connector.py  test_cli.py  test_cli_progress.py  test_code_indexer.py  test_config_loader.py  test_config_schema.py  test_ctags_parser.py  test_doc_indexer.py  test_doc_parsers.py  test_eval_baseline.py  test_eval_cases.py  test_eval_runner.py  test_evidence_packager.py  test_feedback.py  test_fulltext_retriever.py  test_graph_retriever.py  test_http_security.py  test_incremental_pipeline.py  test_index_benchmark.py  test_index_consistency.py  test_index_jobs.py  test_index_progress.py  (+35 more)
(+123 files in other folders)
